--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,10 @@
       type="text/css"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     />
+    <script
+      src="https://kit.fontawesome.com/0d9cd84b6f.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       type="text/css"
